Fix contrast

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -72,7 +72,7 @@
   --ifm-menu-color: var(--ifm-color-emphasis-600);
   --ifm-navbar-background-color: var(--ifm-background-color);
   --ifm-navbar-link-color: var(--ifm-heading-color);
-  --ifm-panel-background: var(--ifm-color-emphasis-25);
+  --ifm-panel-background: var(--ifm-color-emphasis-50);
   --ifm-panel-background-rgb: 249, 249, 250;
   --ifm-panel-background-solid: #f9f9fa;
   --ifm-panel-background-active: rgba( var(--ifm-color-primary-rgb), 0.2 );
